Solution for project

--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 	<data>
 		<variable
 			name="viewBinder"
@@ -11,12 +12,13 @@
 		android:layout_height="match_parent"
 		android:padding="8dp">
 
-		<EditText
-			android:id="@+id/et_input"
-			android:layout_width="0dp"
+		<androidx.appcompat.widget.AppCompatAutoCompleteTextView
+			android:id="@+id/actv_auto_complete"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:hint="@string/enter_zip_or_city"
 			android:text="@={viewBinder.input}"
+			app:visible="@{viewBinder.availableWeatherViewData == null}"
 			app:layout_constraintEnd_toStartOf="@id/btn_go"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintStart_toStartOf="parent"/>
@@ -37,7 +39,7 @@
 			android:layout_width="match_parent"
 			android:layout_marginTop="8dp"
 			app:viewData="@{viewBinder.availableWeatherViewData}"
-			app:layout_constraintTop_toBottomOf="@id/et_input"/>
+			app:layout_constraintTop_toBottomOf="@id/actv_auto_complete"/>
 
 		<include
 			layout="@layout/view_current_weather_empty"
@@ -46,14 +48,23 @@
 			android:layout_width="match_parent"
 			android:layout_marginTop="8dp"
 			app:emptyVisible="@{viewBinder.isEmpty}"
-			app:layout_constraintTop_toBottomOf="@id/et_input" />
+			app:layout_constraintTop_toBottomOf="@id/actv_auto_complete" />
+
+		<include
+			layout="@layout/view_current_weather_error"
+			android:id="@+id/view_current_weather_error"
+			android:layout_height="200dp"
+			android:layout_width="match_parent"
+			android:layout_marginTop="8dp"
+			app:emptyVisible="@{viewBinder.isError}"
+			app:layout_constraintTop_toBottomOf="@id/actv_auto_complete" />
 
 		<androidx.constraintlayout.widget.Barrier
 			android:id="@+id/content_barrier"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			app:barrierDirection="bottom"
-			app:constraint_referenced_ids="view_current_weather_available,view_current_weather_empty" />
+			app:constraint_referenced_ids="view_current_weather_available,view_current_weather_empty,view_current_weather_error" />
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/btn_refresh"
