--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,12 +2,24 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 	<data>
-
+		<variable
+			name="viewBinder"
+			type="com.png.interview.weather.ui.binder.SettingsFragmentViewBinder" />
 	</data>
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:padding="16dp">
+
+		<TextView
+			android:id="@+id/tv_header"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/settings"
+			android:textSize="18sp"
+			android:textStyle="bold"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintStart_toStartOf="parent" />
 
 		<TextView
 			android:id="@+id/tv_units"
@@ -16,9 +28,10 @@
 			android:textStyle="bold"
 			android:textSize="16sp"
 			android:text="@string/units"
-			app:layout_constraintTop_toTopOf="@id/rd_group"
+			android:layout_marginTop="14dp"
+			app:layout_constraintTop_toBottomOf="@id/tv_header"
 			app:layout_constraintBottom_toBottomOf="@id/rd_group"
-			app:layout_constraintStart_toStartOf="parent"/>
+			app:layout_constraintStart_toStartOf="@id/tv_header"/>
 
 		<RadioGroup
 			android:id="@+id/rd_group"
@@ -26,21 +39,24 @@
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			android:layout_marginStart="16dp"
+			android:layout_marginTop="14dp"
 			android:dividerPadding="8dp"
 			android:showDividers="middle"
-			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/tv_header"
 			app:layout_constraintStart_toEndOf="@id/tv_units"
 			app:layout_constraintEnd_toEndOf="parent">
 
 			<RadioButton
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/imperial" />
+				android:text="@string/imperial"
+				android:onClick="@{() -> viewBinder.imperialClicked()}" />
 
 			<RadioButton
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/metric" />
+				android:text="@string/metric"
+				android:onClick="@{() -> viewBinder.metricClicked()}" />
 
 		</RadioGroup>
 
