--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,10 +11,25 @@
 		<action
 			android:id="@+id/action_current_weather_fragment_to_settingsFragment"
 			app:destination="@id/settingsFragment" />
+		<action
+			android:id="@+id/action_current_weather_fragment_to_forecastFragment"
+			app:destination="@id/forecastFragment" />
 	</fragment>
 	<fragment
 		android:id="@+id/settingsFragment"
 		android:name="com.png.interview.weather.ui.fragment.SettingsFragment"
 		android:label="SettingsFragment"
 		tools:layout="@layout/fragment_settings" />
+	<fragment
+		android:id="@+id/forecastFragment"
+		android:name="com.png.interview.weather.ui.fragment.ForecastFragment"
+		android:label="ForecastFragment"
+		tools:layout="@layout/fragment_forecast">
+		<argument
+			android:name="lastSearch"
+			app:argType="string" />
+		<argument
+			android:name="isMetric"
+			app:argType="boolean" />
+	</fragment>
 </navigation>
